--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,45 @@
     --bs-gutter-x: 0;
     --bs-gutter-y: 0;
 }
+/* mixin para posicionamiento de grids */
+@mixin positiongrid($colstart, $colend, $rowstart, $rowend) {
+    grid-column-start: $colstart;
+    grid-column-end: $colend;
+    grid-row-start: $rowstart;
+    grid-row-end: $rowend;
+}
+/* mixin para form del contacto */
+@mixin tamborbox() {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+/* mixin para para flex con align content center y justify content variable*/
+@mixin flexaligncontent($justifycontent) {
+    display: flex;
+    align-content: center;
+    justify-content: $justifycontent;
+}
+/* mixin para hover al pasar por el nav*/
+@mixin color-font() {
+    color: #470696;
+    font-style: italic;
+    transition: all 0.1s;
+}
+/* mixin para botones de sesion carrito */
+@mixin buttonsesioncarro() {
+    width: 50%;
+    height: 2.5rem;
+    transition: 0.3s;
+}
+/* mixin para botones de sesion carrito */
+@mixin buttonseca() {
+    width: 85%;
+    height: 2.5rem;
+    transition: 0.3s;
+}
 
 //Ejecucion por orden de prioridad
 @import 'header';
