--- a/scss/_categoriesproducts.scss
+++ b/scss/_categoriesproducts.scss
@@ -13,16 +13,10 @@
         grid-template-columns: 0.3fr 1.7fr;
         grid-template-rows: auto;
         .acordeoncatproducts{
-            grid-column-start: 1;
-            grid-column-end: 2;
-            grid-row-start: 1;
-            grid-row-end: 2;
+            @include positiongrid(1,2,1,2);
         }
         .contcatproducts{
-            grid-column-start: 2;
-            grid-column-end: 3;
-            grid-row-start: 1;
-            grid-row-end: 2;
+            @include positiongrid(2,3,1,2);
             .filtrosecundario{
                 display: flex;
                 justify-content: end;
@@ -35,9 +29,7 @@
             }
             .catproducts{
                 .products{
-                    display: flex;
-                    justify-content: start;
-                    align-content: center;
+                    @include flexaligncontent(start);
                     flex-wrap: wrap;
                     width: 100%;
                     height: auto;
