--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -16,34 +16,19 @@
                     color: #555;
                 }
                 input{
-                    width: 100%;
-                    padding: 10px;
-                    border: 1px solid #ccc;
-                    border-radius: 4px;
-                    box-sizing: border-box;
+                    @include tamborbox;
                 }
                 #motivo{
-                    width: 100%;
-                    padding: 10px;
-                    border: 1px solid #ccc;
-                    border-radius: 4px;
-                    box-sizing: border-box;
+                    @include tamborbox;
                 }
             }
             .textareaform{
-                grid-column-start: 1;
-                grid-column-end: 3;
-                grid-row-start: 5;
-                grid-row-end: 6;
+                @include positiongrid(1,3,5,6);
                 #comentarios{
                     background-color: #f0f0f0;
                     resize: none;
-                    width: 100%;
                     height: 15rem;
-                    padding: 10px;
-                    border: 1px solid #ccc;
-                    border-radius: 4px;
-                    box-sizing: border-box;
+                    @include tamborbox;
                 }
             }
             .senddata{
