--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -13,8 +13,7 @@
         margin-top: 25px;
     }
     .socialcontacto{
-        grid-column-start: 1;
-        grid-column-end: 2;
+        @include positiongrid(1,2,1,2);
         margin: auto;
         margin-top: 25px;
         .logofooter{ 
@@ -29,11 +28,8 @@
     }
     .ubicacion{
         margin:auto;
-        grid-column-start: 2;
-        grid-column-end: 3;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        @include positiongrid(2,3,1,2);
+        @include flexaligncontent(center);
         width: 100%;
         height: 100%;
         .ubi{
@@ -44,14 +40,14 @@
             width: 90%;
             height: 100%;
             i{
-                display: flex;
-                justify-content: end;
+                @include positiongrid(1,2,1,2);
+                @include flexaligncontent(end);
                 align-items: center;
                 font-size: 150%;
             }
             h3{
-                display: flex;
-                justify-content: start;
+                @include positiongrid(2,3,1,2);
+                @include flexaligncontent(start);
                 align-items: center;
                 font-size: 1.5rem;
                 margin: 0;
@@ -62,23 +58,19 @@
                 margin: auto;
                 width: 95%;
                 height: 95%;
-                grid-column-start: 1; 
-                grid-column-end: 3;
+                @include positiongrid(1,3,2,3);
                 box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.9);
                 border-radius: 15px;
             }
         }
     }
     .serviciocliente{
-        grid-column-start: 3;
-        grid-column-end: 4;
+        @include positiongrid(3,4,1,2);
         margin-left: 5%;
         padding-right: 5%;
     }
     .nosotros{
-        align-items: center;
-        grid-column-start: 4;
-        grid-column-end: 5;
+        @include positiongrid(4,5,1,2);
         margin-right: 10%;
     }
     .serviciocliente, .nosotros{
