--- a/scss/_shoppingcart.scss
+++ b/scss/_shoppingcart.scss
@@ -16,10 +16,7 @@
         grid-template-columns: 1.4fr 0.6fr;
         grid-template-rows: repeat(2 auto);
         #shopproducts{
-            grid-column-start: 1;
-            grid-column-end: 2;
-            grid-row-start: 1;
-            grid-row-end: 3;
+            @include positiongrid(1,2,1,3);
             gap: 10px;
             .shopproduct{
                 border-radius: 5px;
@@ -32,35 +29,23 @@
                 grid-template-columns: 1fr 2fr 1fr;
                 grid-template-rows: repeat(3 auto);
                 .imgshoppro{
-                    grid-column-start: 1;
-                    grid-column-end: 2;
-                    grid-row-start: 1;
-                    grid-row-end: 4;
+                    @include positiongrid(1,2,1,4);
                     img{
                         width: 100%;
                     }
                 }
                 .brandshoppro{
-                    grid-column-start: 2;
-                    grid-column-end: 3;
-                    grid-row-start: 1;
-                    grid-row-end: 2;
+                    @include positiongrid(2,3,1,2);
                     padding-top: 10px;
                 }
                 .nameshoppro{
-                    grid-column-start: 2;
-                    grid-column-end: 3;
-                    grid-row-start: 2;
-                    grid-row-end: 3;
+                    @include positiongrid(2,3,2,3);
                     p{
                         font-size: small;
                     }
                 }
                 .boxnumdeleteshoppro{
-                    grid-column-start: 2;
-                    grid-column-end: 3;
-                    grid-row-start: 3;
-                    grid-row-end: 4;
+                    @include positiongrid(2,3,3,4);
                     display: flex;
                     padding-left: 15px;
                     #contcontainer{
@@ -100,10 +85,7 @@
                     }
                 }
                 .valueshopcartpro{
-                    grid-column-start: 3;
-                    grid-column-end: 4;
-                    grid-row-start: 1;
-                    grid-row-end: 4;
+                    @include positiongrid(3,4,1,4);
                     margin: auto;
                     height: 90%;
                     border-left: 3px dashed rgba(0, 0, 0, 0.5);
@@ -129,10 +111,7 @@
             }
         }
         #summaryshop{
-            grid-column-start: 2;
-            grid-column-end: 3;
-            grid-row-start: 1;
-            grid-row-end: 2;
+            @include positiongrid(2,3,1,2);
             margin-top: 25px;
             margin-bottom: 25px;
             width: 98%;
@@ -193,47 +172,29 @@
                         width: 150px;
                         height: 50px;
                         &:nth-child(1){
-                            grid-column-start: 1;
-                            grid-column-end: 2;
-                            grid-row-start: 1;
-                            grid-row-end: 2;
+                            @include positiongrid(1,2,1,2);
                             margin: auto;
                         }
                         &:nth-child(2){
-                            grid-column-start: 2;
-                            grid-column-end: 3;
-                            grid-row-start: 1;
-                            grid-row-end: 2;
+                            @include positiongrid(2,3,1,2);
                             margin: auto;
                             width: 100px;
                             height: 100px;
                         }
                         &:nth-child(3){
-                            grid-column-start: 1;
-                            grid-column-end: 2;
-                            grid-row-start: 2;
-                            grid-row-end: 3;
+                            @include positiongrid(1,2,2,3);
                             margin: auto;
                         }
                         &:nth-child(4){
-                            grid-column-start: 2;
-                            grid-column-end: 3;
-                            grid-row-start: 2;
-                            grid-row-end: 3;
+                            @include positiongrid(2,3,2,3);
                             margin: auto;
                         }
                         &:nth-child(5){
-                            grid-column-start: 1;
-                            grid-column-end: 2;
-                            grid-row-start: 3;
-                            grid-row-end: 4;
+                            @include positiongrid(1,2,3,4);
                             margin: auto;
                         }
                         &:nth-child(6){
-                            grid-column-start: 2;
-                            grid-column-end: 3;
-                            grid-row-start: 3;
-                            grid-row-end: 4;
+                            @include positiongrid(2,3,3,4);
                             margin: auto;
                         }
                     }
