Se continua con el uso de los mixin para el sass

--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -488,6 +488,14 @@
             }
             .descriptionproproduct{
                 @include positiongrid(1,2,3,4);
+                .acordeondescriptionpropro{
+                    .nav-item{
+                        .nav-link{
+                            padding: 5px;
+                            font-size: small;
+                        }
+                    }
+                }
             }
         }
     }
