--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -13,10 +13,7 @@
         grid-template-columns: repeat(2 1fr);
         grid-template-rows: repeat(2 auto);
         .imagesproproduct{
-            grid-column-start: 1;
-            grid-column-end: 2;
-            grid-row-start: 1;
-            grid-row-end: 2;
+            @include positiongrid(1,2,1,2);
             width: 100%;
             .mainimgproproduct{
                 border: 1px solid black;
@@ -38,10 +35,7 @@
             }
         }
         .detallesproproduct{
-            grid-column-start: 2;
-            grid-column-end: 3;
-            grid-row-start: 1;
-            grid-row-end: 2;
+            @include positiongrid(2,3,1,2);
             width: 90%;
             .brandproproduct{
                 display: flex;
@@ -127,10 +121,7 @@
             }
         }
         .descriptionproproduct{
-            grid-column-start: 1;
-            grid-column-end: 3;
-            grid-row-start: 2;
-            grid-row-end: 3;
+            @include positiongrid(1,3,2,3);
             width: 100%;
             .acordeondescriptionpropro{
                 width: 100%;
