Se modifica tamaño de la lista de contenido oculta de product

--- a/scss/main.css
+++ b/scss/main.css
@@ -1827,7 +1827,7 @@
   }
   #productcontainer .proproduct .descriptionproproduct .acordeondescriptionpropro .nav-item .nav-link {
     padding: 5px;
-    font-size: small;
+    font-size: x-small;
   }
   /* Responsive de categoriesproducts */
   #containercategoriesproducts #containercatproducts {
