--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -492,7 +492,7 @@
                     .nav-item{
                         .nav-link{
                             padding: 5px;
-                            font-size: small;
+                            font-size: x-small;
                         }
                     }
                 }
