--- a/scss/_resgisteruser.scss
+++ b/scss/_resgisteruser.scss
@@ -1,12 +1,3 @@
-/* mexin para display de columnas centradas */
-@mixin column-center() {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-}
-
 /*  */
 /* Style for registeruser */
 /* Sección para llenar formulario del registro de usuario */
@@ -37,10 +28,7 @@
                 overflow-y: hidden;
             }
             .reguserdataone{
-                grid-column-start: 1;
-                grid-column-end: 2;
-                grid-row-start: 1;
-                grid-row-end: 2;
+                @include positiongrid(1,2,1,2);
                 @include column-center;
                 h3{
                     font-weight: bold;
@@ -68,10 +56,7 @@
                 }
             }
             .reguserdatatwo{
-                grid-column-start: 2;
-                grid-column-end: 3;
-                grid-row-start: 1;
-                grid-row-end: 3;
+                @include positiongrid(2,3,1,3);
                 @include column-center;
                 h3{
                     font-weight: bold;
@@ -99,10 +84,7 @@
                 }
             }
             .reguserdatathree{
-                grid-column-start: 1;
-                grid-column-end: 2;
-                grid-row-start: 2;
-                grid-row-end: 3;
+                @include positiongrid(1,2,2,3);
                 @include column-center;
                 h3{
                     font-weight: bold;
@@ -130,10 +112,7 @@
                 }
             }
             .reguserdatafour{
-                grid-column-start: 1;
-                grid-column-end: 3;
-                grid-row-start: 3;
-                grid-row-end: 4;
+                @include positiongrid(1,3,3,4);
                 width: 100%;
                 height: 10rem;
                 @include column-center;
