--- a/scss/main.scss
+++ b/scss/main.scss
@@ -49,6 +49,14 @@
     height: 2.5rem;
     transition: 0.3s;
 }
+/* mexin para display de columnas centradas de registeruser*/
+@mixin column-center() {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+}
 
 //Ejecucion por orden de prioridad
 @import 'header';
